[tool.poetry]
name = "transformit"
version = "0.1.0"
description = ""
authors = ["Tom Fanta <tom@fanta.work>"]

[tool.poetry.dependencies]
python = "^3.10"
pyxel = "^1.7.2"
PyYAML = "^6.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
